Long names no longer overflow

--- a/awx/ui/client/src/job-templates/survey-maker/survey-maker.block.less
+++ b/awx/ui/client/src/job-templates/survey-maker/survey-maker.block.less
@@ -68,6 +68,7 @@
 .SurveyMaker-previewPanel {
     display: flex;
     flex: 0 0 637px;
+    max-width: 637px;
 }
 .SurveyMaker-separatorPanel {
     display: flex;
@@ -116,6 +117,7 @@
     font-weight: normal;
     font-size: small;
     width: 100%;
+    word-break: break-word;
 }
 .SurveyMaker-deleteOverlay {
     height: 100%;
